// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileHeader - Snapshots > matches snapshot for left button 1`] = `
<button
  class="rounded-full p-2 transition-colors hover:bg-secondary/10"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sliders-horizontal h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 5H3"
    />
    <path
      d="M12 19H3"
    />
    <path
      d="M14 3v4"
    />
    <path
      d="M16 17v4"
    />
    <path
      d="M21 12h-9"
    />
    <path
      d="M21 19h-5"
    />
    <path
      d="M21 5h-7"
    />
    <path
      d="M8 10v4"
    />
    <path
      d="M8 12H3"
    />
  </svg>
</button>
`;

exports[`MobileHeader - Snapshots > matches snapshot for logo 1`] = `
<div
  data-testid="logo"
>
  Logo
</div>
`;

exports[`MobileHeader - Snapshots > matches snapshot for right button 1`] = `
<button
  class="rounded-full p-2 transition-colors hover:bg-secondary/10"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-activity h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
    />
  </svg>
</button>
`;

exports[`MobileHeader - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="fixed top-0 right-0 left-0 z-30 border-b border-border/20 bg-background/80 backdrop-blur-sm lg:hidden custom-header"
>
  <div
    class="flex items-center justify-between px-4 py-4"
  >
    <button
      class="rounded-full p-2 transition-colors hover:bg-secondary/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-horizontal h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 5H3"
        />
        <path
          d="M12 19H3"
        />
        <path
          d="M14 3v4"
        />
        <path
          d="M16 17v4"
        />
        <path
          d="M21 12h-9"
        />
        <path
          d="M21 19h-5"
        />
        <path
          d="M21 5h-7"
        />
        <path
          d="M8 10v4"
        />
        <path
          d="M8 12H3"
        />
      </svg>
    </button>
    <div
      data-testid="logo"
    >
      Logo
    </div>
    <button
      class="rounded-full p-2 transition-colors hover:bg-secondary/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`MobileHeader - Snapshots > matches snapshot with custom onLeftIconClick 1`] = `
<div
  class="fixed top-0 right-0 left-0 z-30 border-b border-border/20 bg-background/80 backdrop-blur-sm lg:hidden"
>
  <div
    class="flex items-center justify-between px-4 py-4"
  >
    <button
      class="rounded-full p-2 transition-colors hover:bg-secondary/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-horizontal h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 5H3"
        />
        <path
          d="M12 19H3"
        />
        <path
          d="M14 3v4"
        />
        <path
          d="M16 17v4"
        />
        <path
          d="M21 12h-9"
        />
        <path
          d="M21 19h-5"
        />
        <path
          d="M21 5h-7"
        />
        <path
          d="M8 10v4"
        />
        <path
          d="M8 12H3"
        />
      </svg>
    </button>
    <div
      data-testid="logo"
    >
      Logo
    </div>
    <button
      class="rounded-full p-2 transition-colors hover:bg-secondary/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`MobileHeader - Snapshots > matches snapshot with default props 1`] = `
<div
  class="fixed top-0 right-0 left-0 z-30 border-b border-border/20 bg-background/80 backdrop-blur-sm lg:hidden"
>
  <div
    class="flex items-center justify-between px-4 py-4"
  >
    <button
      class="rounded-full p-2 transition-colors hover:bg-secondary/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sliders-horizontal h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 5H3"
        />
        <path
          d="M12 19H3"
        />
        <path
          d="M14 3v4"
        />
        <path
          d="M16 17v4"
        />
        <path
          d="M21 12h-9"
        />
        <path
          d="M21 19h-5"
        />
        <path
          d="M21 5h-7"
        />
        <path
          d="M8 10v4"
        />
        <path
          d="M8 12H3"
        />
      </svg>
    </button>
    <div
      data-testid="logo"
    >
      Logo
    </div>
    <button
      class="rounded-full p-2 transition-colors hover:bg-secondary/10"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;
